--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: '17'  # Java 17 veya daha yeni bir sürüm
+        java-version: '17'
 
     - name: Cache Gradle packages
       uses: actions/cache@v2
@@ -29,9 +29,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y wget unzip
         wget https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip
-        unzip commandlinetools-linux-7583922_latest.zip
+        unzip commandlinetools-linux-7583922_latest.zip -d $ANDROID_HOME
         mkdir -p $ANDROID_HOME/cmdline-tools
-        mv cmdline-tools $ANDROID_HOME/cmdline-tools/latest
+        mv $ANDROID_HOME/cmdline-tools/latest $ANDROID_HOME/cmdline-tools/latest
 
     - name: Accept licenses
       run: |
@@ -43,7 +43,7 @@ jobs:
 
     - name: Update version code and version name
       run: |
-        sed -i 's/versionCode [0-9]\+/versionCode $(( $(grep versionCode app/build.gradle | awk '{print $2}') + 1 ))/' app/build.gradle
+        sed -i -E 's/versionCode ([0-9]+)/versionCode $((\1 + 1))/' app/build.gradle
         sed -i 's/versionName ".*"/versionName "${{ github.run_number }}"/' app/build.gradle
 
     - name: Run tests
